[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "unwind"
version = "0.4.0"
description = "A simple solution to analysis and extract information from traceback."
authors = [
    {name = "RF-Tar-Railt",email = "rf_tar_railt@qq.com"}
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
keywords = ["traceback", "exception", "crash-report"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
[project.urls]
Homepage = "https://github.com/GraiaCommunity/Unwind"
"Bug Reports" = "https://github.com/GraiaCommunity/Unwind/issues"
Source = "https://github.com/GraiaCommunity/Unwind"


[tool]
[tool.pdm]
[tool.pdm.build]
includes = ["unwind/"]
